// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleResourceDefinitions - Cost management should render resource definitions table 1`] = `
<table
  aria-label="Resource definitions"
  class="pf-v5-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="role-resource-definitions-table"
  data-ouia-component-type="PF5/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class="pf-v5-c-table__thead"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-1"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v5-c-table__th"
        scope="col"
        tabindex="-1"
      >
        resource
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-2"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-3"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-4"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-5"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-6"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-7"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-8"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-9"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-10"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-11"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-12"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-13"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-14"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-15"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-16"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-17"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-18"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-19"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-20"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-21"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        test
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`RoleResourceDefinitions - Inventory should render resource definitions table 1`] = `
<table
  aria-label="Resource definitions"
  class="pf-v5-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="role-resource-definitions-table"
  data-ouia-component-type="PF5/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class="pf-v5-c-table__thead"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-65"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v5-c-table__th"
        scope="col"
        tabindex="-1"
      >
        resource
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-66"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Ungrouped systems
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-67"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for A
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-68"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for B
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-69"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for C
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-70"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Ungrouped systems
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-71"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for A
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-72"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for B
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-73"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for C
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-74"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Ungrouped systems
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-75"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for A
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-76"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for B
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-77"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for C
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-78"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Ungrouped systems
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-79"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for A
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-80"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for B
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-81"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for C
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-82"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Ungrouped systems
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-83"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for A
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-84"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for B
      </td>
    </tr>
  </tbody>
  <tbody
    class="pf-v5-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-85"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-label="resource"
        tabindex="-1"
      >
        Test name for C
      </td>
    </tr>
  </tbody>
</table>
`;
